--- a/src/template/crazyParkingLot.html
+++ b/src/template/crazyParkingLot.html
@@ -2,13 +2,8 @@
 <html>
     <head>
         <title>Crazy Parkinglot v2</title>
-        <meta charset="UTF-8">
-        <meta http-equiv="cache-control" content="no-cache"/>
-        <meta http-equiv="pragma" content="no-cache"/>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta name="viewport"
-                content="width=device-width,user-scalable=0,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     </head>
-    <body style="touch-action: auto; overflow: hidden; margin: 0%; padding: 0%;">
+    <body>
+        <div id="touchDom"></div>
     </body>
 </html>
