feature: control panel with html template

--- a/src/template/crazyParkingLot.html
+++ b/src/template/crazyParkingLot.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Crazy Parkinglot v2</title>
+        <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
     </head>
     <body>
         <div id="crazyParkingLot"></div>
