--- a/src/template/crazyParkingLot.html
+++ b/src/template/crazyParkingLot.html
@@ -4,7 +4,89 @@
         <title>Crazy Parkinglot v2</title>
         <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
     </head>
+    <style>
+        .draggable {
+            width: 25%;
+            min-height: 6.5em;
+            margin: 1rem 0 0 1rem;
+            background-color: #29e;
+            color: white;
+            border-radius: 0.75em;
+            padding: 4%;
+            touch-action: none;
+            user-select: none;
+        }
+
+        input[type=text], select {
+            width: 100%;
+            padding: 5px 5px;
+            font-size: 10px;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type=number], select {
+            width: 100%;
+            padding: 5px 5px;
+            font-size: 10px;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type=button] {
+            width: 100%;
+            background-color: #4CAF50;
+            font-size: 10px;
+            color: white;
+            padding: 5px 5px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type=button]:hover {
+            background-color: #45a049;
+        }
+
+        .inputLabel {
+            font-size: 10px; padding: 5px; margin: 5px;
+        }
+
+        #controlPanel {
+            border-radius: 5px;
+            background-color: #7d93ff;
+            padding: 5px;
+            width: 100px;
+            height: 160px;
+            opacity:0.8;
+            z-index: -1;
+            touch-action: none;
+            user-select: none;
+        }
+
+        #crazyParkingLot {
+            z-index: 1;
+        }
+
+    </style>
     <body>
         <div id="crazyParkingLot"></div>
+        <!-- <div class="draggable"> Draggable Element </div> -->
+        <div id="controlPanel">
+            <label class="inputLabel" for="target">Car UUID</label>
+            <input type="text" id="targetUUID" placeholder="uuid">
+          
+            <label class="inputLabel" for="tileX">X cordinate</label>
+            <input type="number" id="tileX" placeholder="x">
+            
+            <label class="inputLabel" for="tileY">Y cordinate</label>
+            <input type="number" id="tileY" placeholder="y">
+          
+            <input type="button" id="moveBtn" value="MOVE">
+          </div>
     </body>
 </html>
