fix: add style on control panel for interference with phaser scene

--- a/src/template/crazyParkingLot.html
+++ b/src/template/crazyParkingLot.html
@@ -58,6 +58,7 @@
 
         #controlPanel {
             border-radius: 5px;
+            position:absolute;
             background-color: #7d93ff;
             padding: 5px;
             width: 100px;
