--- a/src/template/crazyParkingLot.html
+++ b/src/template/crazyParkingLot.html
@@ -19,7 +19,6 @@
 
         input[type=text], select {
             width: 100%;
-            padding: 5px 5px;
             font-size: 10px;
             display: inline-block;
             border: 1px solid #ccc;
@@ -29,7 +28,6 @@
 
         input[type=number], select {
             width: 100%;
-            padding: 5px 5px;
             font-size: 10px;
             display: inline-block;
             border: 1px solid #ccc;
@@ -42,6 +40,7 @@
             background-color: #4CAF50;
             font-size: 10px;
             color: white;
+            margin-top: 5px;
             padding: 5px 5px;
             border: none;
             border-radius: 4px;
@@ -62,7 +61,7 @@
             background-color: #7d93ff;
             padding: 5px;
             width: 100px;
-            height: 160px;
+            height: 185px;
             opacity:0.8;
             z-index: -1;
             touch-action: none;
@@ -86,7 +85,10 @@
             
             <label class="inputLabel" for="tileY">Y cordinate</label>
             <input type="number" id="tileY" placeholder="y">
-          
+            
+            <label class="inputLabel" for="angle">angle</label>
+            <input type="number" id="angle" disabled="true">
+
             <input type="button" id="moveBtn" value="MOVE">
           </div>
     </body>
